# astrobotany

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  GALLERY.md  LICENSE  README.md  main.py  pyproject.toml  remove_column_plant.dead.sql  setup.py
.github/workflows/: astrobotany.yml  test.yml
art/: README.md
art/playscii/: agave1.psci  aloe1.psci  aloe2.psci  aloe3.psci  brugmansia1.psci  brugmansia3.psci  cactus1.psci  columbine1.psci  columbine2.psci  daffodil1.psci  fern1.psci  fern2.psci  ficus1.psci  hemp1.psci  hemp2.psci  hemp3.psci  iris2.psci  jadeplant1.psci  lithops1.psci  moss2.psci  pachypodium1.psci  pachypodium2.psci  pansy2.psci  pansy3.psci  poppy2.psci  sage1.psci  seed.psci  seedling.psci  snapdragon2.psci  sun.psci  sunflower1.psci  sunflower3.psci  venusflytrap1.psci
art/scripts/: build_palette.py  convert.py  export_playscii.py  print_directory.py
astrobotany/: __init__.py  art.py  cache.py  constants.py  garden.py  items.py  leaderboard.py  migrations.py  models.py  pond.py  settings.py  sounds.py  tasks.py  views.py
astrobotany/art/: agave2.psci  agave3.psci  aloe1.psci  aloe2.psci  aloe3.psci  baobab1.psci  baobab2.psci  baobab3.psci  bee.psci  brugmansia2.psci  brugmansia3.psci  cactus2.psci  cactus3.psci  christmas.psci  columbine3.psci  daffodil2.psci  daffodil3.psci  duck.psci  epilog1.psci  epilog2.psci  epilog3.psci  epilog4.psci  fern1.psci  fern2.psci  fern3.psci  ficus2.psci  ficus3.psci  iris1.psci  iris3.psci  jackolantern.psci  jackolantern.txt  jadeplant2.psci  jadeplant3.psci  lithops1.psci  lithops2.psci  lithops3.psci  mailbox.psci  (+27 more)
scripts/: add_seed_data.py  build_charset.py  demo_art.py  export_playscii.py  export_routes.py  generate_badges.py  generate_client_cert.sh  generate_server_ca.sh  make_screenshots.py  migrations.py  rebuild_garden.py  register.py  send_mail.py
tests/: conftest.py  test_astrobotany.py  test_models.py
tools/: astrobotany  astrobotany-migrate  astrobotany-tasks  bootstrap  build  lint  mypy  pytest  python
(+153 files in other folders)
